--- a/src/app/dress-code.html
+++ b/src/app/dress-code.html
@@ -198,6 +198,8 @@
         const modal = document.getElementById("myModal");
         const modalImg = document.getElementById("img01");
 
+        let startX = 0;
+
         galleryImages.forEach((img, index) => {
             img.addEventListener('click', function () {
                 openModal(index);
@@ -223,6 +225,20 @@
             }
             modalImg.src = galleryImages[currentSlideIndex].src;
         }
+
+        // Eventos de toque para navegação por deslizar
+        modalImg.addEventListener('touchstart', function (e) {
+            startX = e.touches[0].clientX;
+        });
+
+        modalImg.addEventListener('touchend', function (e) {
+            const endX = e.changedTouches[0].clientX;
+            if (startX > endX + 50) {
+                changeSlide(1); // Desliza para a esquerda
+            } else if (startX < endX - 50) {
+                changeSlide(-1); // Desliza para a direita
+            }
+        });
     </script>
 </body>
 
