--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <div class="content">
-        <div class="title">Nathielly e Filipe</div>
-        <div class="subtitle">CONVIDAM PARA A CELEBRAÇÃO DE SEU CASAMENTO</div>
-        <div class="date">08 • 03 • 25 às 15:00</div> <!-- Horário do evento adicionado -->
+        <h1 class="title">Nathielly e Filipe</h1>
+        <p class="subtitle">Convidam para a celebração de seu casamento</p>
+        <p class="date">08 • 03 • 25 às 15:00</p> <!-- Horário do evento adicionado -->
         <a href="home.html" class="button">
             <i class="far fa-envelope"></i>
         </a>
