--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -92,7 +92,7 @@ body {
     left: 0;
     width: 100%;
     height: 150px;
-    background: url('../assets/mato.png') repeat-x;
+    /* background: url('../assets/mato.png') repeat-x; */
     background-size: cover;
     opacity: 0.7;
 }
