--- a/src/app/home.html
+++ b/src/app/home.html
@@ -68,9 +68,17 @@
     <div id="locationModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Escolha uma opção de localização</h2>
-            <a href="https://abrir.link/zjsDp" target="_blank" class="modal-button">Localização no Mapa</a>
-            <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">Ver Local em 3D</a>
+            <h2>Descubra o Local do Nosso Grande Dia!</h2> <!-- Novo título sugerido -->
+            <p>
+                Você deve estar se perguntando: Onde será o casamento? Como é o local do nosso grande dia? 
+                Aqui embaixo você pode explorar o local em uma experiência imersiva em 3D ou ver a localização para chegar até o local.
+            </p>
+            <a href="https://abrir.link/zjsDp" target="_blank" class="modal-button">
+                <i class="fas fa-map-marked-alt"></i> Abrir no Google Maps
+            </a>
+            <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">
+                <i class="fas fa-vr-cardboard"></i> Visualizar em 3D
+            </a>
         </div>
     </div>
 
