--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -150,6 +150,44 @@ h2 {
     max-width: 400px;
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif;
+}
+
+.modal-content h2 {
+    color: darkolivegreen;
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+}
+
+.modal-content p {
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 15px;
+    line-height: 1.5;
+}
+
+.modal-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 10px auto;
+    padding: 12px 20px;
+    background-color: darkolivegreen;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    font-size: 1rem;
+}
+
+.modal-button:hover {
+    background-color: #455d27;
+    transform: translateY(-2px);
+}
+
+.modal-button i {
+    font-size: 1.2rem; /* Tamanho do ícone */
 }
 
 .close {
@@ -164,19 +202,4 @@ h2 {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
-
-.modal-button {
-    display: block;
-    margin: 10px auto;
-    padding: 10px 20px;
-    background-color: darkolivegreen;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.modal-button:hover {
-    background-color: #455d27;
 }
