--- a/src/app/home.html
+++ b/src/app/home.html
@@ -77,7 +77,7 @@
                 <i class="fas fa-map-marked-alt"></i> Abrir no Google Maps
             </a>
             <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">
-                <i class="fas fa-vr-cardboard"></i> Visualizar em 3D
+                <i class="fas fa-vr-cardboard"></i> Ver local em 3D
             </a>
         </div>
     </div>
