--- a/src/app/home.html
+++ b/src/app/home.html
@@ -68,7 +68,7 @@
     <div id="locationModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Descubra o Local do Nosso Grande Dia!</h2> <!-- Novo título sugerido -->
+            <h2>Veja Onde Vamos Dizer 'Sim'!</h2> <!-- Novo título sugerido -->
             <p>
                 Você deve estar se perguntando: Onde será o casamento? Como é o local do nosso grande dia? 
                 Aqui embaixo você pode explorar o local em uma experiência imersiva em 3D ou ver a localização para chegar até o local.
