--- a/src/app/dress-code.html
+++ b/src/app/dress-code.html
@@ -176,12 +176,12 @@
     </div>
 
     <div class="gallery" id="gallery">
-        <img src="https://via.placeholder.com/280x350.png?text=Roupa+1" alt="Roupa 1">
-        <img src="https://via.placeholder.com/280x350.png?text=Roupa+2" alt="Roupa 2">
-        <img src="https://via.placeholder.com/280x350.png?text=Roupa+3" alt="Roupa 3">
-        <img src="https://via.placeholder.com/280x350.png?text=Roupa+4" alt="Roupa 4">
-        <img src="https://via.placeholder.com/280x350.png?text=Roupa+5" alt="Roupa 5">
-        <img src="https://via.placeholder.com/280x350.png?text=Roupa+6" alt="Roupa 6">
+        <img src="../assets/dresscode1.jpg" alt="Roupa 1">
+        <img src="../assets/dresscode1.jpg" alt="Roupa 2">
+        <img src="../assets/dresscode1.jpg" alt="Roupa 3">
+        <img src="../assets/dresscode1.jpg" alt="Roupa 4">
+        <img src="../assets/dresscode1.jpg" alt="Roupa 5">
+        <img src="../assets/dresscode1.jpg" alt="Roupa 6">
     </div>
 
     <!-- The Modal -->
