--- a/src/app/home.html
+++ b/src/app/home.html
@@ -58,12 +58,16 @@
     <div id="giftListModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Escolha uma opção de presente</h2>
-            <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="modal-button">Magalu</a>
-            <a href="giftgallery.html" target="_blank" class="modal-button">PIX</a>
+            <h2>Escolha Como Presentear!</h2>
+            <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="modal-button">
+                <i class="fas fa-gift"></i> Lista de Presentes na Magalu
+            </a>
+            <a href="giftgallery.html" target="_blank" class="modal-button">
+                <i class="fas fa-money-bill-wave"></i> Presentear com PIX
+            </a>
         </div>
     </div>
-
+    
     <!-- Modal para Localização -->
     <div id="locationModal" class="modal">
         <div class="modal-content">
