--- a/src/app/home.html
+++ b/src/app/home.html
@@ -63,7 +63,7 @@
                 <i class="fas fa-gift"></i> Lista de Presentes na Magalu
             </a>
             <a href="giftgallery.html" target="_blank" class="modal-button">
-                <i class="fas fa-money-bill-wave"></i> Presentear com PIX
+                <i class="fas fa-university"></i> Presentear com PIX
             </a>
         </div>
     </div>
