--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,21 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casamento de Nathielly e Filipe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../assets/favicon-32x32.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="../assets/favicon-16x16.png" type="image/png" sizes="16x16">
-    <link rel="apple-touch-icon" href="../assets/apple-touch-icon.png">
-    <link rel="icon" sizes="192x192" href="../assets/android-chrome-192x192.png">
-    <link rel="icon" sizes="512x512" href="../assets/android-chrome-512x512.png">
     <link rel="stylesheet" href="../styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Great+Vibes&family=Parisienne&family=Sacramento&family=Cormorant+SC&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">  
 </head>
 
 <body>
     <div class="content">
         <h1 class="title">Nathielly e Filipe</h1>
-        <p class="subtitle">Convidam para a celebração de seu casamento</p>
-        <p class="date">08 • 03 • 25 às 15:00</p> <!-- Horário do evento adicionado -->
+        <p class="subtitle">CONVIDAM PARA A CELEBRAÇÃO DE SEU CASAMENTO</p>
+        <p class="date">08 • 03 • 25</p>
+        <p class="date">15:00</p>
         <a href="home.html" class="button">
             <i class="far fa-envelope"></i>
         </a>
