--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -3,6 +3,7 @@
 }
 
 @keyframes bounce {
+
     0%,
     20%,
     50%,
@@ -30,20 +31,24 @@ body {
     align-items: center;
     height: 100vh;
     text-align: center;
+    position: relative;
 }
 
 .content {
-    background: rgba(255, 255, 255, 0.9);
-    padding: 20px 40px;
-    border-radius: 20px;
+    background-color: white;
+    padding: 20px;
+    border-top-left-radius: 50% 20%;
+    border-top-right-radius: 50% 20%;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 6px rgba(0, 0, 0, 0.23);
+    width: 80%;
+    max-width: 600px;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    height: auto;
-    width: 90%;
-    max-width: 600px;
+    margin: auto;
+    overflow: hidden;
     position: relative;
 }
 
@@ -76,22 +81,26 @@ body {
     background-color: transparent;
     border: none;
     margin-top: 20px;
-    font-size: 4rem;
+    font-size: 5rem;
     color: rgb(48, 63, 22);
-
-    transition: color 0.3s ease, transform 0.3s ease;
+    transition: color 0.3s ease;
     text-decoration: none;
+    max-width: 300px;
+    padding: 15px 30px;
 }
 
 .button i {
-    font-size: 6rem;
-    margin-right: 0;
+    font-size: 7rem;
+    margin-right: 10px;
     animation: bounce 2s infinite;
 }
 
 .button:hover {
     color: darkolivegreen;
-    transform: scale(1.1);
+}
+
+a {
+    text-decoration: none;
 }
 
 .footer-img {
@@ -99,36 +108,44 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 150px;
+    height: 190px;
     /* background: url('../assets/mato.png') repeat-x; */
-    background-size: cover;
-    opacity: 0.7;
+    background-size: contain;
+    opacity: 0.8;
+    /* Opacidade */
 }
 
 /* Media query para telas menores, como celulares */
 @media only screen and (max-width: 500px) {
     .content {
-        padding: 15px 20px;
-        max-width: 350px;
+        width: 80%;
+        margin-bottom: 0px;
+        max-height: 50vh;
     }
 
     .title {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     .subtitle {
-        font-size: 1rem;
+        font-size: 0.6rem;
     }
 
     .date {
-        font-size: 1.8rem;
+        font-size: 2rem;
     }
 
     .button i {
-        font-size: 4rem;
+        font-size: 5rem;
+    }
+
+    .button {
+        font-size: 3rem;
+        padding: 10px 20px;
     }
 
     .footer-img {
-        height: 80px;
+        height: 95px;
+        opacity: 0.8;
     }
 }
