Ajuste no texto de dress code

--- a/src/app/dress-code.html
+++ b/src/app/dress-code.html
@@ -172,7 +172,7 @@
     <h1>Código de Vestimenta</h1>
 
     <div class="description">
-        <p>Queridos convidados, para harmonizar com a paleta de cores do nosso casamento, pedimos que escolham roupas em tons de <strong>verde oliva, bege, dourado</strong> ou <strong>tons pastéis</strong>. <strong>Por favor, evitem o branco</strong>, que é reservado exclusivamente para a noiva.</p>
+        <p>Queridos convidados, <strong>Por favor, evitem o branco</strong>, que é reservado exclusivamente para a noiva.</p>
     </div>
 
     <div class="gallery" id="gallery">
