Atualizado para a verção singlepage

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <div class="content">
+        <p class="versiculo"></p>
         <h1 class="title">Nathielly e Filipe</h1>
         <p class="subtitle">CONVIDAM PARA A CELEBRAÇÃO DE SEU CASAMENTO</p>
         <p class="date">08 • 03 • 25</p>
