--- a/src/app/styles/dress-code.css
+++ b/src/app/styles/dress-code.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
@@ -10,8 +10,8 @@ body {
     text-align: center;
     color: #333;
     margin-top: 20px;
-    font-size: 2.5rem; /* Aumenta o tamanho do título */
-}
+    font-size: 2.5rem; 
+} */
 
 .form-container {
     display: flex;
