--- a/src/app/styles/dress-code.css
+++ b/src/app/styles/dress-code.css
@@ -1,19 +1,4 @@
-/* body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    color: #333;
-}
-
-.page-title {
-    text-align: center;
-    color: #333;
-    margin-top: 20px;
-    font-size: 2.5rem; 
-} */
-
-.form-container {
+/* .form-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,13 +12,13 @@ form {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 30px; /* Aumenta o padding para mais espaço interno */
+    padding: 30px;
     width: 100%;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
 .input-group {
     margin-bottom: 25px; /* Aumenta o espaço entre os grupos de entrada */
