--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -67,7 +67,7 @@ h2 {
 .section {
     display: block !important;
     padding: 20px;
-    background-color: rgb(253, 250, 250); /* Temporário para facilitar a visualização */
+    background-color: #f0f0f0;
 }
 
 .section h3 {
