--- a/src/app/styles/location.css
+++ b/src/app/styles/location.css
@@ -47,7 +47,7 @@ p {
 }
 
 .buttons-container {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     display: flex;
     flex-wrap: wrap; /* Permite que os botões quebrem para a linha seguinte se necessário */
     justify-content: center; /* Centraliza os botões horizontalmente */
