implementado galeria de presente

--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -16,5 +16,5 @@
 </div>
 
 <head>
-    <link rel="stylesheet" href="path/to/your/css/file.css">
+    <link rel="stylesheet" href="../styles/giftgallery.css">
 </head>
