--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -1,8 +1,3 @@
-<div id="giftGallerySection">
-    <h2>Galeria de Presentes</h2>
-    <div id="giftGallery" class="gift-gallery"></div>
-</div>
-
 <!-- Modal de Pagamento -->
 <div id="paymentModal" class="modal">
     <div class="modal-content">
@@ -23,6 +18,9 @@
         <!-- Campo de link para Pix -->
         <label for="pixLink">Link para pagamento Pix:</label>
         <input type="text" id="pixLink" readonly>
+
+        <!-- Opções de parcelamento com cartão de crédito -->
+        <div id="cardPayment"></div> <!-- Adicione este elemento -->
 
         <!-- Botão de envio para o WhatsApp -->
         <button id="sendWhatsAppBtn">
