implementado galeria de presente

--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -3,7 +3,10 @@
     <div class="modal-content">
         <!-- Botão de fechar modal -->
         <span id="closeModalBtn" class="close">&times;</span>
-        <h2>Escolha o método de pagamento</h2>
+        <div id="giftGallerySection">
+            <h2>Galeria de Presentes</h2>
+            <div id="giftGallery" class="gift-gallery"></div>
+        </div>
 
         <!-- Opções de pagamento com ícones -->
         <div class="payment-options">
