--- a/src/app/home.html
+++ b/src/app/home.html
@@ -4,6 +4,9 @@
     <title>Detalhes do Casamento</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <script src="../scripts/countdown.js"></script>
+    <script src="../scripts/modals.js"></script>
+    <script src="../scripts/homeEvents.js"></script>
 </head>
 
 <body>
@@ -72,7 +75,7 @@
     <div id="locationModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Veja Onde Vamos Dizer 'Sim'!</h2> <!-- Novo título sugerido -->
+            <h2>Veja Onde Vamos Dizer 'Sim'!</h2>
             <p>
                 Você deve estar se perguntando: Onde será o casamento? Como é o local do nosso grande dia? 
                 Aqui embaixo você pode explorar o local em uma experiência imersiva em 3D ou ver a localização para chegar até o local.
@@ -85,8 +88,5 @@
             </a>
         </div>
     </div>
-
-    <script src="../scripts/home.js"></script>
 </body>
-
 </html>
