--- a/src/app/home.html
+++ b/src/app/home.html
@@ -6,6 +6,9 @@
     <title>Casamento de Nathielly e Filipe</title>
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="../scripts/countdown.js"></script>
+    <script src="../scripts/modals.js"></script>
+    <script src="../scripts/homeEvents.js"></script>
 </head>
 <body>
 
