--- a/src/app/home.html
+++ b/src/app/home.html
@@ -6,9 +6,7 @@
     <title>Casamento de Nathielly e Filipe</title>
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="../scripts/countdown.js"></script>
-    <script src="../scripts/modals.js"></script>
-    <script src="../scripts/homeEvents.js"></script>
+    <script src="../scripts/home.js" defer></script>
 </head>
 <body>
 
@@ -43,9 +41,30 @@
         <button id="dressCodeBtn" class="button"><i class="fas fa-tshirt"></i> Dress Code</button>
     </nav>
 
-    <!-- Contêiner para conteúdo dinâmico -->
-    <div id="contentContainer" class="section">
-        <!-- Conteúdo dinâmico será carregado aqui -->
-    </div>
+    <!-- Seções da página -->
+    <section id="confirmSection" class="section">
+        <h2>Confirmação</h2>
+        <p>Aqui você pode confirmar sua presença no casamento.</p>
+        <!-- Formulário de Confirmação -->
+    </section>
+
+    <section id="locationSection" class="section">
+        <h2>Localização</h2>
+        <p>Aqui estão os detalhes de como chegar ao local do casamento.</p>
+        <!-- Detalhes de localização -->
+    </section>
+
+    <section id="giftSection" class="section">
+        <h2>Lista de Presentes</h2>
+        <p>Escolha o presente para os noivos!</p>
+        <!-- Galeria de presentes -->
+    </section>
+
+    <section id="dressCodeSection" class="section">
+        <h2>Dress Code</h2>
+        <p>Confira o código de vestimenta para o grande dia.</p>
+        <!-- Informações sobre Dress Code -->
+    </section>
+
 </body>
 </html>
