--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,9 +7,10 @@
     <title>Casamento de Nathielly e Filipe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../styles/index.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">  
 </head>
 
 <body>
@@ -19,15 +20,11 @@
         <p class="subtitle">CONVIDAM PARA A CELEBRAÇÃO DE SEU CASAMENTO</p>
         <p class="date">08 • 03 • 25</p>
         <p class="date">15:00</p>
-        <a href="#sections" class="button" id="inviteButton">
+        <a href="home.html" class="button">
             <i class="far fa-envelope"></i>
         </a>
     </div>
-    
     <div class="footer-img"></div>
-
-    <script>
-    </script>
 </body>
 
 </html>
