--- a/src/app/home.html
+++ b/src/app/home.html
@@ -40,26 +40,8 @@
         <button id="dressCodeBtn" class="button"><i class="fas fa-tshirt"></i> Dress Code</button>
     </nav>
 
-    <!-- Seções dinâmicas -->
-    <section id="confirmSection" class="section" style="display:none;">
-        <h2>Confirmação de Presença</h2>
-        <p>Formulário para confirmação...</p>
-    </section>
-
-    <section id="locationSection" class="section" style="display:none;">
-        <h2>Localização</h2>
-        <p>Mapa e informações de localização...</p>
-    </section>
-
-    <section id="giftSection" class="section" style="display:none;">
-        <h2>Lista de Presentes</h2>
-        <p>Detalhes sobre como presentear...</p>
-    </section>
-
-    <section id="dressCodeSection" class="section" style="display:none;">
-        <h2>Código de Vestimenta</h2>
-        <p>Informações sobre o dress code...</p>
-    </section>
+    <!-- Div onde o conteúdo dos outros arquivos será carregado -->
+    <div id="content-container"></div>
 
     <!-- Scripts -->
     <script src="../scripts/home.js"></script>
